# Realtime-ASL

./: README.md  app.py  data_collection_binary.py  data_collection_final.py
sign-language-frontend/: .gitignore  README.md  package-lock.json  svelte.config.js  tsconfig.json
sign-language-frontend/src/: hooks.server.ts
sign-language-frontend/src-tauri/: Cargo.toml  tauri.conf.json
sign-language-frontend/src-tauri/icons/: icon.icns
sign-language-frontend/src/routes/api/process-frame/: $types.d.ts  +server.ts
templates/: index.html
